Fixed missing cmake include

--- a/fssim_gazebo_plugins/CMakeLists.txt
+++ b/fssim_gazebo_plugins/CMakeLists.txt
@@ -29,7 +29,8 @@ include_directories(include
         ${GAZEBO_INCLUDE_DIRS}
         ${SDFormat_INCLUDE_DIRS}
         ${OGRE_INCLUDE_DIRS}
-        ${Boost_INCLUDE_DIRS})
+        ${Boost_INCLUDE_DIRS}
+        ".")
 
 find_package(catkin REQUIRED COMPONENTS
         gazebo_msgs
